--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/CristianRodr/coderProyectoPagGamer/issues"
   },
-  "homepage": "https://github.com/CristianRodr/coderProyectoPagGamer#readme"
+  "homepage": "https://github.com/CristianRodr/coderProyectoPagGamer#readme",
+  "devDependencies": {
+    "node-sass": "^8.0.0",
+    "nodemon": "^2.0.20"
+  }
 }
