--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.2",
     "boxicons": "^2.1.4"
   }
 }
